# CoolView

./: .gitignore  DEVELOPMENT_LOG.md  GHOST_BUG_DEBUG_LOG.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  monitor.rs  sensors.rs
src/components/: HUD.tsx  History.tsx  Settings.tsx  Sparkline.tsx
